fix: conflicts [DHIS2-18845]
Signed-off-by: Giuseppe Nespolino <g.nespolino@gmail.com>